# logos

./: .gitignore  .mcp.json  .opencode.json  CHANGELOG.md  Dockerfile  Procfile  README.md  ROADMAP.md  STABILITY.md  check_escalation.py  check_exam.py  check_hardmode.py  check_lean.py  check_predicate.py  debug_fol09.py  escalate.py  generate_exam.py  hardmode.py  pyproject.toml  railway.toml  test_lean.py  test_z3_09.py  todo.md  verify_stress.py  vision_and_roadmap.md
.claude/: mcp.json
DriftGuard/: README.md
Empeiria/: README.md
Episteme/: README.md
ExperienceBus/: README.md
Kosmos/: README.md
MemoryBrain/: README.md
PlannerBrain/: README.md
Praxis/: README.md
SelfModel/: README.md
SkillLibrary/: README.md
Techne/: README.md
Telos/: README.md
WorldModel/: README.md
docs/: development_process.md  formal_guarantees.md  gpt_implementer_instructions.md  logicbrain_development_roadmap.md  mcp_setup.md  mcp_smoke_test_results.md  metamorphic_ledger.md  new_session_handoff.md  release_playbook.md  roadmap_v013_v020.md  stage4_research_watch.md
examples/: agent_integration.py  full_reasoning_loop.py  interactive_sessions.py  proof_carrying_actions.py  quick_verify.py  reflective_agent.py
logic_brain/: __init__.py  __main__.py  action_policy.py  adversarial_harness.py  analyzer.py  assumptions.py  belief_graph.py  certificate.py  certificate_store.py  cli.py  counterfactual.py  diagnostics.py  evaluate.py  execution_bus.py  explain.py  external.py  generator.py  goal_contract.py  lean_session.py  lean_verifier.py  loader.py  mcp_server.py  mcp_server_http.py  mcp_session_store.py  mcp_tools.py  models.py  orchestrator.py  parser.py  predicate.py  predicate_models.py  proof_exchange.py  recovery.py  runner.py  trust_ledger.py  uncertainty.py  verified_runtime.py  verifier.py  z3_session.py
logos/: loader.py
results/: escalation_round1.json  escalation_round1_answers.json  escalation_round2.json  escalation_round2_answers.json  exam_fresh_001.json  exam_hard_001.json  experiment_compaction_curve.json  experiment_context_retrieval.json  experiment_entailment_compaction.json  experiment_memory_scale.json  experiment_mixed_accumulation.json  hardmode_10v_10p.json  hardmode_10v_10p_answers.json  hardmode_12v_12p.json  hardmode_12v_12p_answers.json  hardmode_8v_8p.json  hardmode_8v_8p_answers.json  lean_answers.json  llm_answers_fresh.json  llm_answers_run1.json  llm_answers_stress.json  predicate_answers.json
tests/: test___main__.py  test_action_policy.py  test_adversarial_harness.py  test_analyzer.py  test_assumptions.py  test_belief_graph.py  test_certificate.py  test_certificate_store.py  test_cli.py  test_cli_unit.py  test_counterfactual.py  test_cross_agent_exchange.py  test_diagnostics.py  test_evaluate.py  test_execution_bus.py  test_explain.py  test_external.py  test_generator.py  test_goal_contract.py  test_lean_session.py  test_lean_verifier.py  test_loader.py  test_mcp_action_bus.py  test_mcp_beliefs.py  test_mcp_certificate_store.py  test_mcp_certify.py  test_mcp_contract.py  test_mcp_orchestrate.py  test_mcp_server.py  test_mcp_tools.py  test_metamorphic_action_policy.py  test_metamorphic_assumptions.py  (+35 more)
(+15 files in other folders)
