[build-system]
requires = ["setuptools>=68.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "logic-brain"
version = "0.9.0"
description = "LLM x Deterministic Logic Verifier — exploiting the P!=NP asymmetry"
requires-python = ">=3.10"
dependencies = [
    "z3-solver>=4.12,<5.0",
]

[project.optional-dependencies]
dev = [
    "anyio>=4.0",
    "mcp>=1.26,<2.0",
    "pytest>=7.0",
    "pytest-cov>=5.0",
    "hypothesis>=6.0",
    "ruff>=0.4",
    "mypy>=1.10",
    "pdoc>=14.0",
]
mcp = [
    "mcp>=1.26,<2.0",
]
http = [
    "mcp>=1.26,<2.0",
    "anyio>=4.0",
    "starlette>=0.40",
    "uvicorn>=0.30",
]

[project.scripts]
logic-brain-mcp = "logic_brain.mcp_server:main"
logic-brain-mcp-http = "logic_brain.mcp_server_http:main"

[tool.pytest.ini_options]
testpaths = ["tests"]
markers = [
    "metamorphic: metamorphic relation regression tests",
]

[tool.coverage.run]
source = ["logic_brain"]
omit = [
    "logic_brain/lean_session.py",
    "logic_brain/lean_verifier.py",
]

[tool.coverage.report]
fail_under = 85
show_missing = true

[tool.mypy]
python_version = "3.10"
strict = true

[[tool.mypy.overrides]]
module = ["z3", "z3.*"]
ignore_missing_imports = true

[tool.ruff]
target-version = "py310"
line-length = 120

[tool.ruff.lint]
select = ["E", "F", "W"]
ignore = ["W293", "W291"]

[tool.setuptools.packages.find]
include = ["logic_brain*", "examples*"]
